Cleanup LibLoader